made cleanup changes